--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ attrs==17.4.0
 autocorrect==0.3.0
 Automat==0.6.0
 backports.functools-lru-cache==1.4
+backports.weakref==1.0.post1
+bleach==1.5.0
 boto==2.48.0
 boto3==1.5.10
 botocore==1.8.24
@@ -19,12 +21,14 @@ decorator==4.1.2
 docutils==0.14
 enum34==1.1.6
 Flask==0.12.2
+funcsigs==1.0.2
 functools32==3.2.3.post2
 futures==3.2.0
 gensim==3.2.0
 gingerit==0.6.0
 grammar-check==1.3.1
 html2text==2018.9.1
+html5lib==0.9999999
 hyperlink==17.3.1
 idna==2.6
 incremental==17.5.0
@@ -36,14 +40,19 @@ jmespath==0.9.3
 jsonschema==2.6.0
 jupyter-core==4.4.0
 lxml==4.1.1
+Markdown==2.6.11
 MarkupSafe==1.0
 matplotlib==2.1.1
+mock==2.0.0
+monkeylearn==0.3.7
 nbformat==4.4.0
 nltk==3.2.5
 numpy==1.14.0
 pandas==0.22.0
 parsel==1.3.1
+pbr==3.1.1
 plotly==2.2.3
+protobuf==3.5.1
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycparser==2.18
@@ -53,6 +62,7 @@ pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.3
 queuelib==1.4.2
+rake-nltk==1.0.1
 requests==2.8.1
 s3transfer==0.1.12
 scikit-learn==0.19.1
@@ -63,6 +73,8 @@ six==1.11.0
 sklearn==0.0
 smart-open==1.5.6
 subprocess32==3.2.7
+tensorflow==1.4.1
+tensorflow-tensorboard==0.4.0rc3
 traitlets==4.3.2
 Twisted==17.9.0
 urllib3==1.22
