--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ futures==3.2.0
 gensim==3.2.0
 gingerit==0.6.0
 grammar-check==1.3.1
-html2text==2018.9.1
+html2text
 html5lib==0.9999999
 hyperlink==17.3.1
 idna==2.6
@@ -57,6 +57,7 @@ pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycparser==2.18
 PyDispatcher==2.0.5
+pyenchant==2.0.0
 pyOpenSSL==17.5.0
 pyparsing==2.2.0
 python-dateutil==2.6.1
