--- a/requirements.txt
+++ b/requirements.txt
@@ -61,6 +61,7 @@ pyenchant==2.0.0
 pyOpenSSL==17.5.0
 pyparsing==2.2.0
 python-dateutil==2.6.1
+python-rake==1.4.4
 pytz==2017.3
 queuelib==1.4.2
 rake-nltk==1.0.1
@@ -76,6 +77,7 @@ smart-open==1.5.6
 subprocess32==3.2.7
 tensorflow==1.4.1
 tensorflow-tensorboard==0.4.0rc3
+textblob==0.15.1
 traitlets==4.3.2
 Twisted==17.9.0
 urllib3==1.22
