--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ Flask==0.12.2
 funcsigs==1.0.2
 functools32==3.2.3.post2
 futures==3.2.0
+fuzzywuzzy==0.16.0
 gensim==3.2.0
 gingerit==0.6.0
 grammar-check==1.3.1
@@ -61,6 +62,7 @@ pyenchant==2.0.0
 pyOpenSSL==17.5.0
 pyparsing==2.2.0
 python-dateutil==2.6.1
+python-Levenshtein==0.12.0
 python-rake==1.4.4
 pytz==2017.3
 queuelib==1.4.2
