--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ decorator==4.1.2
 docutils==0.14
 enum34==1.1.6
 Flask==0.12.2
+Flask-Caching==1.3.3
 funcsigs==1.0.2
 functools32==3.2.3.post2
 futures==3.2.0
@@ -28,7 +29,7 @@ fuzzywuzzy==0.16.0
 gensim==3.2.0
 gingerit==0.6.0
 grammar-check==1.3.1
-html2text
+html2text==2018.1.9
 html5lib==0.9999999
 hyperlink==17.3.1
 idna==2.6
@@ -49,11 +50,15 @@ monkeylearn==0.3.7
 nbformat==4.4.0
 nltk==3.2.5
 numpy==1.14.0
+oauthlib==2.0.6
 pandas==0.22.0
 parsel==1.3.1
 pbr==3.1.1
+pexpect==4.4.0
+Pillow==5.0.0
 plotly==2.2.3
 protobuf==3.5.1
+ptyprocess==0.5.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycparser==2.18
@@ -68,6 +73,7 @@ pytz==2017.3
 queuelib==1.4.2
 rake-nltk==1.0.1
 requests==2.8.1
+requests-oauthlib==0.8.0
 s3transfer==0.1.12
 scikit-learn==0.19.1
 scipy==1.0.0
@@ -82,7 +88,9 @@ tensorflow-tensorboard==0.4.0rc3
 textblob==0.15.1
 traitlets==4.3.2
 Twisted==17.9.0
+twython==3.6.0
 urllib3==1.22
 w3lib==1.18.0
 Werkzeug==0.14.1
+wordcloud==1.4.1
 zope.interface==4.4.3
